@@ -3,10 +3,10 @@
     "appcache"              : false,
     "cache" : {"allowed" : false},
     "minification" : {
-        "js"    : false,
-        "css"   : false,
+        "js"    : true,
+        "css"   : true,
         "html"  : true,
-        "img"   : false
+        "img"   : true
     },
     "github_key"            : "891c251b925e4e967fa9",
     "github_secret"         : "afe9bed1e810c5dc44c4c2a953fc6efb1e5b0545",
