@@ -8,12 +8,6 @@
         
         <link rel=stylesheet href="/css/reset.css">
         <link rel=stylesheet href="/css/style.css">
-        
-        <!--[if lt IE 9]>
-            <script src="//ie7-js.googlecode.com/svn/version/2.1(beta4)/IE9.js"></script>
-            <script src="//code.jquery.com/jquery-1.8.0.min.js" id=jquery-1_8_0_min_js ></script>
-        <![endif]-->
-    
     </head>
     <body>
 
@@ -44,6 +38,8 @@
     <script src=/lib/client/dom.js></script>
     <script src=/lib/client.js></script>
     <!--[if lt IE 9]>
+    <script src="//ie7-js.googlecode.com/svn/version/2.1(beta4)/IE9.js" async></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js" id=jquery_min_js ></script>
     <script src=/lib/client/ie.js id=ie_js ></script>
     <![endif]-->
     </body>
