@@ -4,7 +4,8 @@
     "use strict";
     
     var main        = global.cloudcmd.main,
-        DIR         = main.DIR;
+        DIR         = main.DIR,
+        LIBDIR      = main.LIBDIR;
     
     exports.Minify = {
         /* pathes to directories */
@@ -68,7 +69,7 @@
                 lStyleCSS  = DIR + 'css/style.css',
                 lResetCSS  = DIR + 'css/reset.css';
             if (this._allowed.js) {
-                lOptimizeParams.push(DIR + 'client.js');
+                lOptimizeParams.push(LIBDIR + 'client.js');
             }
             
             if (this._allowed.html)
